tests/miniJava/neg/005864_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { 0 if ( 0 ) { } else { } } }
